force-app/main/default/objects/Appeal__c/fields/Request_for_Higher_Review__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Higher_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box is checked if the veteran has requested for a higher authority to review.</description>
    <label>Request for Higher Review</label>
    <type>Checkbox</type>
</CustomField>