force-app/main/default/objects/Appeal__c/fields/Request_for_In_Person_Hearing__c.field-meta.xml
<CustomField>
    <fullName>Request_for_In_Person_Hearing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The veteran has requested for an in person hearing.</description>
    <label>Request for In-Person Hearing</label>
    <type>Checkbox</type>
</CustomField>