force-app/main/default/objects/Appeal__c/fields/Submit_New_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Submit_New_Evidence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit New Evidence</label>
    <type>Checkbox</type>
</CustomField>